--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,11 @@ jobs:
   test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+      - uses: actions/checkout@v2
+      - name: Install docker
+      - run: |
+        apt update
+        apt install docker
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,5 +34,6 @@ jobs:
       - name: Run all the tests
         shell: pwsh
         run: |
+          docker version
           Write-Information "Running all the tests"
-          Invoke-Pester -script .\tests\*tests.ps1
+          Invoke-Pester -script .\tests\*tests.ps1 -Passthru
