--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,9 @@ jobs:
     steps:      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-            
-      - name: Install docker
-      - run: |
-        apt update
-        apt install docker
+      - uses: ryankurte/action-apt@v0.1
+        with: 
+          packages: "docker"          
         
       # Runs a set of commands using the runners shell
       - name: Run all the tests
