--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,7 @@ jobs:
     steps:      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2  
-      - uses: ryankurte/action-apt@v0.2.0
-        with: 
-          packages: "docker.io"              
+      - uses: docker/setup-buildx-action@v1.0.3            
         
       # Runs a set of commands using the runners shell
       - name: Run all the tests
