--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: checkout
+        uses: actions/checkout@v2  
+        
+      - name: install docker
+        uses: docker/setup-buildx-action@v1.0.3
+        
       - name: run the tests
-      - uses: actions/checkout@v2  
-      - uses: docker/setup-buildx-action@v1.0.3
-      - uses: zyborg/pester-tests-report@latest
+        uses: zyborg/pester-tests-report@latest
         with:
           include_paths: tests
           report_name: dockerPlaygrounTests
